crates/reinhardt-pages/tests/ui/from_request/fail/non_named_struct.rs
use reinhardt_pages::FromRequest;
use reinhardt_pages::router::request::PathParam;

#[derive(FromRequest)]
struct BadRequest(PathParam<i64>);

fn main() {}
