crates/reinhardt-pages/tests/ui/from_request/fail/non_named_struct.stderr
error: FromRequest can only be derived for structs with named fields
 --> tests/ui/from_request/fail/non_named_struct.rs:5:18
  |
5 | struct BadRequest(PathParam<i64>);
  |                  ^^^^^^^^^^^^^^^^
